--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -149,6 +149,7 @@ android {
 }
 
 dependencies {
+    implementation project(':@react-native-community_async-storage')
     compile("com.facebook.react:react-native:0.59.3") { force = true }
     implementation project(':react-native-vector-icons')
     implementation project(':react-native-gesture-handler')
