--- a/ios/Podfile
+++ b/ios/Podfile
@@ -13,6 +13,8 @@ target 'EatSafe' do
 #     # Pods for testing
 #   end
 
+pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-community/async-storage'
+
 #   target 'EatSafeTests' do
 #     inherit! :search_paths
 #     # Pods for testing
