--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native": "0.59.3",
     "react-native-barcode-mask": "^1.0.5",
     "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
+    "react-native-easy-grid": "^0.2.1",
     "react-native-gesture-handler": "^1.1.0",
     "react-navigation": "^3.6.1"
   },
