--- a/ios/Podfile
+++ b/ios/Podfile
@@ -15,6 +15,8 @@ target 'EatSafe' do
 
 pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-community/async-storage'
 
+pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
 #   target 'EatSafeTests' do
 #     inherit! :search_paths
 #     # Pods for testing
