--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "react-native": "0.59.3",
     "react-native-barcode-mask": "^1.0.5",
     "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
+    "react-native-dialog": "^5.6.0",
     "react-native-easy-grid": "^0.2.1",
     "react-native-gesture-handler": "^1.1.0",
+    "react-native-modal-datetime-picker": "^7.4.0",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.6.1"
   },
