--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native-gesture-handler": "^1.1.0",
     "react-native-modal-datetime-picker": "^7.4.0",
     "react-native-vector-icons": "^6.4.2",
-    "react-navigation": "^3.6.1"
+    "react-navigation": "^3.6.1",
+    "string-similarity": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.4.3",
