--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
     "react-native-dialog": "^5.6.0",
     "react-native-easy-grid": "^0.2.1",
+    "react-native-floating-action": "^1.14.2",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-modal-datetime-picker": "^7.4.0",
     "react-native-vector-icons": "^6.4.2",
