--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-floating-action": "^1.14.2",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-modal-datetime-picker": "^7.4.0",
+    "react-native-textinput-effects": "^0.5.1",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.6.1",
     "string-similarity": "^3.0.0"
