--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-easy-grid": "^0.2.1",
     "react-native-floating-action": "^1.14.2",
     "react-native-gesture-handler": "^1.1.0",
+    "react-native-modal": "^10.0.0",
     "react-native-modal-datetime-picker": "^7.4.0",
     "react-native-textinput-effects": "^0.5.1",
     "react-native-vector-icons": "^6.4.2",
