Handle no network connection

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -17,6 +17,9 @@ pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-community/async-s
 
 pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+
+pod 'react-native-netinfo', :path => '../node_modules/@react-native-community/netinfo'
+
 #   target 'EatSafeTests' do
 #     inherit! :search_paths
 #     # Pods for testing
