--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.3.2",
+    "@react-native-community/netinfo": "^2.0.10",
     "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-native": "0.59.3",
