--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -149,6 +149,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-svg')
     implementation project(':@react-native-community_netinfo')
     implementation project(':react-native-vector-icons')
     implementation project(':@react-native-community_async-storage')
