--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-gesture-handler": "^1.1.0",
     "react-native-modal": "^10.0.0",
     "react-native-modal-datetime-picker": "^7.4.0",
+    "react-native-svg": "^9.4.0",
     "react-native-textinput-effects": "^0.5.1",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.6.1",
