--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -154,6 +154,7 @@ dependencies {
     implementation project(':react-native-vector-icons')
     implementation project(':@react-native-community_async-storage')
     compile("com.facebook.react:react-native:0.59.3") { force = true }
+    compile project(':RNMail')
     implementation project(':react-native-gesture-handler')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
