--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-easy-grid": "^0.2.1",
     "react-native-floating-action": "^1.14.2",
     "react-native-gesture-handler": "^1.1.0",
+    "react-native-mail": "^3.0.7",
     "react-native-modal": "^10.0.0",
     "react-native-modal-datetime-picker": "^7.4.0",
     "react-native-svg": "^9.4.0",
