--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-dialog": "^5.6.0",
     "react-native-easy-grid": "^0.2.1",
     "react-native-floating-action": "^1.14.2",
+    "react-native-fs": "^2.13.3",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-mail": "^3.0.7",
     "react-native-modal": "^10.0.0",
