--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native": "0.59.3",
     "react-native-barcode-mask": "^1.0.5",
     "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera.git",
+    "react-native-chart-kit": "^2.6.1",
     "react-native-dialog": "^5.6.0",
     "react-native-easy-grid": "^0.2.1",
     "react-native-floating-action": "^1.14.2",
