--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -106,6 +106,14 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    defaultConfig {
+        multiDexEnabled true
+    }
+
+    dexOptions {
+      jumboMode = true
+    }
+
     packagingOptions {
       exclude 'META-INF/androidx.exifinterface_exifinterface.version'
       }
@@ -149,6 +157,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-pdf-lib')
     implementation project(':react-native-fs')
     implementation project(':react-native-svg')
     implementation project(':@react-native-community_netinfo')
