--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-mail": "^3.0.7",
     "react-native-modal": "^10.0.0",
     "react-native-modal-datetime-picker": "^7.4.0",
+    "react-native-pdf-lib": "^0.2.0",
     "react-native-svg": "^9.4.0",
     "react-native-textinput-effects": "^0.5.1",
     "react-native-vector-icons": "^6.4.2",
